# Graphics_on_Python

./: README.md  pyproject.toml  struct  test.py
Engine/: Logger.py  Main.py
Engine/Basic/: Mesh.py
Engine/Core/: Component.py  Scene.py
Engine/Input/: Input_handler.py
Engine/Objects/: Base.py  Camera.py  __init__.py
Engine/Physics/: AABB.py
Engine/Shaders/: OpenGL_Shader.py  Shader.py  Shader_controller.py  Shader_handler.py  __init__.py
Engine/Utility/: __init__.py
Engine/Window/: GLFW.py  __init__.py
Engine/World/: World.py  __init__.py
Engine_folder/: Logger.py  Main.py
Engine_folder/Basic/: Mesh.py  Vectors.py
Engine_folder/Components/: Transform.py
Engine_folder/Managers/: Asset_Manager.py  Component_manager.py  Input_manager.py  Physics_manager.py  Render_manager.py  Scene_manager.py  Shader_manager.py  Texture_manager.py  __init__.py
Engine_folder/Objects/: Base_object.py  Camera.py
Engine_folder/Other/: Key_action.py  Singleton.py
Engine_folder/Physics/: Collider.py
Engine_folder/Scripting/: Scriptable_Object.py
Engine_folder/Shaders/: OpenGL_Shader.py
Examples/NoEngine/: SDL_OpenGL_Triangle.py
Examples/WithEngine/: SDL_OpenGL_Triangle.py
Program/: imgui.ini  program.py
Program/Assets/: BallController.py  PlatformController.py
TSGEngine/: Logger.py  Main.py
TSGEngine/Core/: Math.py  Scene.py
TSGEngine/Input/: Key_map  __init__.py
TSGEngine/Rendering/: __init__.py
TSGEngine/Shaders/: Shader_handler.py
TSGEngine/Texture/: Texture_handler.py  __init__.py
TSGEngine/Utility/: Destructible_Class.py
(+50 files in other folders)
