[tool.poetry]
name = "tsgengine"
version = "0.1.0"
description = "Too Scrappy Game Engine"
authors = ["Trololoxa221 <nikolai.2006-2015@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.25.1"
PyOpenGL = "^3.1.7"
PyOpenGL-accelerate = "^3.1.7"
glfw = "^2.6.2"
imgui = "^2.0.0"
opencv-python = "^4.8.0.74"
opencv-contrib-python = "^4.8.0.74"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
